--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,11 @@ android {
         viewBinding true
     }
 
+        dataBinding {
+            enabled = true
+        }
+    
+
 
 }
 
@@ -45,19 +50,17 @@ dependencies {
     implementation 'com.firebaseui:firebase-ui-database:3.2.2'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.github.rey5137:material:1.3.1'
-    implementation 'com.google.android.material.material:1.1.0-alpha09:'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
     implementation 'io.paperdb:paperdb:2.6'
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
+    implementation 'com.theartofdev.edmodo:android-image-cropper:2.7.+'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.1'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1'
     implementation 'androidx.navigation:navigation-fragment:2.4.1'
     implementation 'androidx.navigation:navigation-ui:2.4.1'
     testImplementation 'junit:junit:4.13.2'
-    implementation 'de.hdodenhof:circleimageview:3.1.0'
-    implementation 'com.google.android.material.material:1.1.0-alpha09'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 }
