--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ECommerce">
         <activity
+            android:name=".settingsActivity"
+            android:exported="false" />
+        <activity
             android:name=".navDrawer"
             android:exported="false"
             android:label="@string/title_activity_nav_drawer"
