--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,10 +53,11 @@ dependencies {
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
     implementation 'io.paperdb:paperdb:2.6'
+    implementation  'com.cepheuen.elegant-number-button:lib:1.0.2'
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
-    implementation 'com.theartofdev.edmodo:android-image-cropper:'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.1'
+    implementation 'com.theartofdev.edmodo:android-image-cropper:2.7.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1'
     implementation 'androidx.navigation:navigation-fragment:2.4.1'
     implementation 'androidx.navigation:navigation-ui:2.4.1'
