--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.ecommerce"
     xmlns:tools="http://schemas.android.com/tools"
-    >
+    package="com.example.ecommerce">
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -13,56 +12,44 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true">
-
         <activity
             android:name=".productdetail"
             android:exported="false"
-            android:theme="@style/Theme.ECommerce"
-
-            />
+            android:theme="@style/Theme.ECommerce" />
         <activity
             android:name=".navDrawer"
             android:exported="false"
-            android:theme="@style/Theme.ECommerce"
-
             android:label="@string/title_activity_nav_drawer"
-             />
+            android:theme="@style/Theme.ECommerce" />
         <activity
             android:name=".AdminAddProduct"
-            android:theme="@style/Theme.ECommerce"
-
-            android:exported="false" />
+            android:exported="false"
+            android:theme="@style/Theme.ECommerce" />
         <activity
             android:name=".AdminCategoryActivity"
-            android:theme="@style/Theme.ECommerce"
-
-            android:exported="false" />
+            android:exported="false"
+            android:theme="@style/Theme.ECommerce" />
         <activity
             android:name=".LoginActivity2"
-            android:theme="@style/Theme.ECommerce"
-
-            android:exported="false" />
+            android:exported="false"
+            android:theme="@style/Theme.ECommerce" />
         <activity
             android:name=".registerActivity"
-            android:theme="@style/Theme.ECommerce"
-
-            android:exported="true" />
+            android:exported="true"
+            android:theme="@style/Theme.ECommerce" />
         <activity
             android:name=".MainActivity"
-            android:theme="@style/Theme.ECommerce"
-
-            android:exported="true">
+            android:exported="true"
+            android:theme="@style/Theme.ECommerce">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
-            android:theme="@style/Base.Theme.AppCompat"   />
-
-
+        <activity
+            android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
+            android:theme="@style/Base.Theme.AppCompat" />
     </application>
 
 </manifest>
