--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,8 @@
         android:supportsRtl="true">
         <activity
             android:name=".ConfirmFinalActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:theme="@style/Theme.ECommerce"/>
         <activity
             android:name=".productdetail"
             android:exported="false"
