--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true">
         <activity
+            android:name=".resetPassword"
+            android:exported="false"
+            android:theme="@style/Theme.ECommerce"/>
+        <activity
             android:name=".ConfirmFinalActivity"
             android:exported="false"
             android:theme="@style/Theme.ECommerce" />
